# impl-from-into-similar

./: .gitignore  Cargo.toml  README.md
impl-from-into-similar-test/: Cargo.toml
impl-from-into-similar-test/src/: lib.rs
src/: lib.rs
tests/: test.rs
