[package]
name = "impl-from-into-similar"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
regex = "1.7.1"
proc-macro2 = "1.0.51"