[package]
name = "impl-from-into-similar"
version = "0.2.1"
edition = "2021"
description = "Implement Into to any struct to convert between structs sharing similar fields. Uses serde_json."
license = "MIT"
repository = "https://github.com/ShadedSauce/impl-from-into-similar"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
regex = "1.7.1"
proc-macro2 = "1.0.51"

[dev-dependencies]
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.69"