[package]
name = "impl-from-into-similar-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl-from-into-similar = { path = ".." }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }